# 4_0-ELSIAN-INVEST

./: .gitignore  4_0-ELSIAN-INVEST.code-workspace  CHANGELOG.md  README.md  ROADMAP.md  VISION.md  _debug_kar.py  _debug_sections.py  _run_acquire.py  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: auditor.md  capacity-scout.md  director.md  engineer.md  kickoff.md  orchestrator.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/agents/: deterministic.agent.md  elsian-4.agent.md  elsian-auditor.agent.md  elsian-capacity-scout.agent.md  elsian-kickoff.agent.md  elsian-orchestrator.agent.md  project-director.agent.md
.github/prompts/: curate-expected.prompt.md
.github/workflows/: ci.yml
cases/0327/: case.json  expected.json
cases/ACLS/: case.json  expected.json
cases/ACVA/: case.json  expected.json
cases/ADTN/: case.json  expected.json
cases/CROX/: case.json  expected.json
cases/DCBO/: case.json
cases/DNOW/: case.json  expected.json
cases/FRPH/: case.json  expected.json
cases/GCT/: case.json  expected.json
cases/HBB/: case.json  expected.json
cases/INMD/: case.json  expected.json
cases/IOSP/: case.json  expected.json
cases/JBH/: case.json  expected.json
cases/JELD/: case.json  expected.json
cases/KAR/: case.json  expected.json
cases/KELYA/: case.json  expected.json
cases/MATW/: case.json  expected.json
cases/NEXN/: case.json  expected.json
cases/NVDA/: case.json  expected.json
cases/NVRI/: case.json  expected.json
cases/PHIN/: case.json  expected.json
cases/PR/: case.json  expected.json
cases/SOM/: case.json  expected.json
cases/SONO/: case.json  expected.json
cases/TALO/: case.json  expected.json
cases/TEP/: case.json  expected.json
cases/TZOO/: case.json  expected.json
cases/TZOO_backup/: case.json  expected.json
config/: extraction_rules.json  field_aliases.json  ixbrl_concept_map.json  selection_rules.json
docs/project/: BACKLOG.md  BACKLOG_DONE.md  DECISIONS.md  FIELD_DEPENDENCY_MATRIX.md  KNOWLEDGE_BASE.md  MODULE_1_ENGINEER_CONTEXT.md  OPPORTUNITIES.md  PLAN_CIERRE_UNIFICADO.md  PLAN_DEC010_WP1-WP6.md  PLAN_IMPLEMENTACION_FILTRADO.md  PROJECT_STATE.md  PROMPT_BL076_RETROPORT_FIELDS.md  ROLES.md  field_dependency_matrix.json
docs/reports/: AUDIT_EXPECTED_JSON.md  (+1 more)
elsian/: __init__.py  __main__.py  cli.py  config.py  context.py  curate_draft.py  expected_derived.py  markets.py  onboarding.py  pipeline.py  run_metrics.py  scaffold.py
scripts/: backfill_bl076_fields.py  backfill_expected_derived.py  build_scout_context.py  check_governance.py  read_handoff.py  validate_contracts.py  write_handoff.py
tasks/: BL-061.task_manifest.json  BL-071.task_manifest.json
tests/: conftest.py
(+145 files in other folders)
