[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elsian"
version = "4.0.0-alpha.1"
description = "Commercial-grade financial data extraction platform with full provenance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "ELSIAN"}]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (>5s) — deselect with '-m \"not slow\"'",
    "network: marks tests that require network access",
]

[tool.ruff]
target-version = "py311"
line-length = 99
