[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elsian"
version = "4.0.0-alpha.1"
description = "Deterministic financial extraction pipeline with provenance-first validation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "ELSIAN"}]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.12",
    "mypy>=1.19",
    "pip-audit>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (>5s) — deselect with '-m \"not slow\"'",
    "network: marks tests that require network access",
]

[tool.ruff]
target-version = "py311"
line-length = 99
exclude = ["tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401", "F841", "E741"]

[tool.mypy]
python_version = "3.11"
files = [
    "elsian/models/case.py",
    "elsian/models/field.py",
    "elsian/models/filing.py",
    "elsian/models/result.py",
]
pretty = false
